--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <main>
-        <h1 class="mt-5">Steinke beim Kauf der Maha-Bar</h1>
+        <h1 class="mt-5">Steinke startet durch</h1>
         <img src="gifs/ambitious-goals.gif" alt="">
 
         <h1 class="mt-5">Steinke beim ersten Teammeeting</h1>
@@ -59,7 +59,7 @@
         <h1 class="mt-5">Steinke fühlt sich nicht noch nicht ganz integriert</h1>
         <img src="gifs/moving-straightaway.gif" alt="">
 
-        <h1 class="mt-5">Steinke zeigt erstmal wer die Hosen hier anhat, kurz</h1>
+        <h1 class="mt-5">Steinke zeigt erstmal wer die Hosen anhat, kurz</h1>
         <img src="gifs/ninja-chicken.gif" alt="">
 
         <h1 class="mt-5">Steinke versucht das Projekt zu retten</h1>
